classDiagram
    class Customer {
        -int customerId
        -String name
        -String email
        -String phoneNumber
        +Customer(int, String, String)
        +Customer()
        +getCustomerId() int
        +getName() String
        +setName(String) void
        +getEmail() String
        +setEmail(String) void
        +getPhoneNumber() String
        +setPhoneNumber(String) void
        +getCustomerInfo() String
    }

    class Product {
        -int productId
        -String name
        -double price
        -Category catetory
        +Product(int, String, double, Category)
        +getProductId() int
        +getName() String
        +setName(String) void
        +getPrice() double
        +setPrice(double) void
        +getCategory() Category
        +getProductInfo() String
    }

    class Order {
        -int orderId
        -List~Product~ products
        -Customer customer
        +Order(int, Customer)
        +addProduct(Product) void
        +removeProduct(Product) void
        +calculateTotal() double
        +getOrderId() int
        +getCustomer() Customer
        +setCustomer(Customer) void
        +getProducts() List~Product~
        +displayOrder() void
    }

    Order "1" --> "1" Customer : belongsTo
Order "1" o-- "*" Product : contains
